syntax = "proto2";
package BlitzMessage;

option java_package = "com.blitzhere.BlitzMessage";
option java_generic_services = true;

import "objectivec-descriptor.proto";
option (google.protobuf.objectivec_file_options).package = "";
option (google.protobuf.objectivec_file_options).class_prefix = "B";
option (google.protobuf.objectivec_file_options).relax_camel_case = true;


import "UserProfiles.proto";
//----------------------------------------------------------------------------------------
//
//                                                                                  Search
//
//----------------------------------------------------------------------------------------


enum SearchType {
  STSearchAll = 0;
  STUsers     = 1;
  STTopics    = 2;
}


message AutocompleteRequest {
  optional string       query      = 1;
  optional SearchType   searchType = 2;
}


message AutocompleteResponse {
  optional string       query = 1;
  repeated string       suggestions = 2;
}


message UserSearchRequest {
    optional string     query = 1;
}


message UserSearchResponse {
    optional string         query    = 1;
    repeated UserProfile    profiles = 2;
}


message SearchCategory {
  optional string item            = 1;
  optional string parent          = 2;
  optional bool   isLeaf          = 3;
  optional string descriptionText = 4;
}


message SearchCategories {
  repeated SearchCategory categories  = 1;
}
