syntax = "proto2";
package BlitzMessage;

option java_package = "com.blitzhere.BlitzMessage";
option java_generic_services = true;

import "objectivec-descriptor.proto";
option (google.protobuf.objectivec_file_options).package = "";
option (google.protobuf.objectivec_file_options).class_prefix = "B";
option (google.protobuf.objectivec_file_options).relax_camel_case = true;


import "Types.proto";
//----------------------------------------------------------------------------------------
//
//                                                                    User Tracking Events
//
//----------------------------------------------------------------------------------------


message UserEvent {
  required Timestamp    timestamp   = 1;
  optional Location     location    = 2;
  required string       event       = 3;
  repeated string       eventData   = 4;
}


message UserEventBatch {
  repeated UserEvent userEvents = 1;
}


message UserEventBatchResponse {
  optional Timestamp latestEventUpdate = 1;
}
